# hymnbeam

./: .gitignore  DISTRIBUTION_PLAN.md  LICENSE  PLAN.md  README.md  build-macos.sh  build-sidecar.sh
.github/workflows/: release.yml
backend/: database.py  export_songs.py  importer.py  main.py  requirements.txt  setlists.py  song_collections.py  song_rays_backend.spec  songs.py
frontend/: index.html  projector.html
frontend/css/: fonts.css  projector.css  styles.css
frontend/fonts/: NOTICES.md
frontend/js/: app.js  bible.js  projector.js
songs/: amazing_grace.json  how_great_thou_art.txt  worship_songs.csv
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  backgrounds.rs  bible.rs  collections.rs  db.rs  export.rs  import.rs  macos_dock.rs  main.rs  models.rs  settings.rs  songs.rs
