[package]
name = "hymnbeam"
version = "0.1.0"
description = "Church song lyrics projector"
authors = ["HymnBeam"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Utilities
dirs = "6"
regex = "1"
csv = "1"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
